  solution could also have been added
- fixed bug in cons_linear concerning huge activity values: besides infinite contributions, we now also treat huge
  contributions separately, count their occurences in a constraint, and provide a relaxed activity value
- fixed bug in mutation heuristic with unnecessary aborts due to a wrong memory limit

parameters:
- new parameter <presolving/convertinttobin/maxdomainsize> by default is set to SCIP_LONGINT_MAX, which deternmines
  the domainsize for which integers are converted to their binary representation
- new parameter <presolving/convertinttobin/onlypoweroftwo> by default is set to FALSE, that parameter allows you to
  only convert integer variables with a domainsize of 2^p - 1 to their binary representation
- new parameter <presolving/convertinttobin/samelocksinbothdirections> by default is set to FALSE, that parameter allows
  you to convert only integer variables to their binary representation, which have the same amount of up- and downlocks
- branching/fullstrong/reevalage changed from an integer to a longint parameter
- new parameter for changing the timingmask for calling the propagtion method of all propagator plugins
  propagating/%s/timingmask and all constraint plugins constraints/%s/timingmask
- new parameter constraints/indicator/dualreductions to enable dual presolving/propagation steps
- new parameters constraints/indicator/{sepacouplingcuts,sepacouplinglocal} to enable separation of (local) cuts
- new parameters constraints/indicator/{maxsepacuts,maxsepacutsroot} to restrict the number of separated cuts
- new parameter separating/oddcycle/maxunsucessfull to automatically turn off separation
- new parameter numerics/recompfac which denotes the factor, by which the absolute of an iteratively updated value has
  to be decreased in order to recompute the value from scratch
- new parameters separating/cgmip/{minnodelimit,maxnodelimit} to determine node limit. Removed parameter 
  separating/cgmip/nodelimit.